--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,14 @@
 name = "jari"
 version = "0.1.0"
 edition = "2024"
+readme = "README.md"
+license = "MIT"
+description = "Small and simple offline project task tracker"
+authors = ["mkmij <github.com/mkmij>"]
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
+anyhow = "1.0"
+log = "0.4"
+env_logger = "0.11.8"
+clap = { version = "4.5.53", features = ["derive", "env"] }
