--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ description = "Small and simple offline project task tracker"
 authors = ["mkmij <github.com/mkmij>"]
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
 log = "0.4"
 env_logger = "0.11.8"
 clap = { version = "4.5.53", features = ["derive", "env"] }
+serde = { version = "1.0.228", features = ["derive"] }
+toml = "0.9.10"
